--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -150,6 +150,7 @@ $light-green: #f0f5f1; // Light green background
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   padding: 8px 0;
   background-color: #fff;
+  overflow: visible;
 
   &.solid {
     background-color: #fff;
